platform-services/janitor-bot/tests/snapshots/integration__commands__pr-close.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  command: Close
external_requests:
  - method: DELETE
    path: /api/v1/repos/anurag/k8s/issues/3/labels/10
    body:
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/3
    service: forgejo
  - method: PATCH
    path: /api/v1/repos/anurag/k8s/issues/3
    body:
      assignee: ~
      assignees: ~
      body: ~
      due_date: ~
      milestone: ~
      ref: ~
      state: closed
      title: ~
      unset_due_date: ~
      updated_at: ~
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/comments/300/reactions
    body:
      content: "+1"
    service: forgejo
