platform-services/janitor-bot/tests/snapshots/integration__commands__pr-merge-deleted-noop.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  ignored: comment not created
external_requests: []
